Fixed line height issue on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,6 @@ body {
   color: white;
   font-family: 'Roboto', sans-serif;
   top: 50%;
-  line-height: 0;
   font-size: 20px;
   position: absolute;
 }
